--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "portfolio-start",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Dmitry-Poltaradnev.github.io/portfolio",
   "dependencies": {
     "@babel/core": "7.16.0",
+    "@emailjs/browser": "^4.3.3",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.3",
     "@svgr/webpack": "5.5.0",
     "@testing-library/jest-dom": "5.14.1",
@@ -13,6 +15,7 @@
     "@types/node": "16.7.13",
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
+    "@types/react-scroll": "^1.8.10",
     "babel-jest": "27.4.2",
     "babel-loader": "8.2.3",
     "babel-plugin-named-asset-import": "0.3.8",
@@ -30,6 +33,7 @@
     "eslint-webpack-plugin": "3.1.1",
     "file-loader": "6.2.0",
     "fs-extra": "10.0.0",
+    "gh-pages": "^6.1.1",
     "html-webpack-plugin": "5.5.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "27.4.3",
@@ -46,7 +50,9 @@
     "react-app-polyfill": "3.0.0",
     "react-dev-utils": "12.0.1",
     "react-dom": "18.2.0",
+    "react-parallax-tilt": "^1.7.219",
     "react-refresh": "0.11.0",
+    "react-scroll": "^1.9.0",
     "resolve": "1.20.0",
     "resolve-url-loader": "4.0.0",
     "sass-loader": "12.3.0",
@@ -57,6 +63,7 @@
     "tailwindcss": "3.0.2",
     "terser-webpack-plugin": "5.2.5",
     "typescript": "4.4.2",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "2.1.0",
     "webpack": "5.64.4",
     "webpack-dev-server": "4.6.0",
@@ -66,7 +73,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
